--- a/MEAN Stack- Criando aplicações completas com Javascript/alurapic/package.json
+++ b/MEAN Stack- Criando aplicações completas com Javascript/alurapic/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.14.1",
+    "consign": "^0.1.2",
     "express": "^4.13.3"
   }
 }
